test/compiler/pass/_cake.ods
do (
    () ->
        do print("Hello, world!")
        return 42
)()

do print(
    ((x) -> return x + 1)(41)
)
