test/compiler/fail/_print_return_type.ods
do print("Hello, world!") + 42
